--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
                 <button>CHECK</button>
             </div>
         </div>
+        
     </div>
-
+    <footer> <h3>Created By <br><span>@Soumen Maity</span></h3></span></footer>
 </body>
+
+
 
 <script>
     document.querySelector('button').addEventListener('click', (e) => {
